# lipo-warehouse-postalcode-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  distance_new.py  pyproject.toml
warehouse_postalcode_generator/: __main__.py  cli.py  coordinates.py  core.py  fileop.py
