[tool.poetry]
name = "lipo-warehouse-postalcode-generator"
version = "1.0.0"
description = ""
authors = ["Icaro Martins <icaro@allquanto.com>"]
readme = "README.md"
packages = [{include = "warehouse_postalcode_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
googlemaps = "^4.10.0"
geopy = "^2.3.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
version_files = [
    "warehouse_postalcode_generator/__init__.py",
    "pyproject.toml"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.poetry.scripts]
warehouse_postalcode_generator = "warehouse_postalcode_generator.__main__:main"
